manifests/apps/rancher/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rancher-deploy
spec:
  replicas: 1
  template:
    spec:
      serviceAccountName: rancher
      containers:
        - name: rancher
          image: rancher/rancher:latest
          args:
            - --no-cacerts
          ports:
            - containerPort: 80
