manifests/apps/rancher/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rancher-service
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
