manifests/apps/rancher/ingressroutes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rancher-ingressroute
spec:
  entryPoints:
    - websecure
  tls:
    secretName: rancher-cert
  routes:
    - match: Host(`rancher.homelab.v-thomas.com`)
      kind: Rule
      services:
        - name: rancher-service
          port: 80
